# rize

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  middleware.security.ts  pyproject.toml
app/: layout.tsx
app/(protected)/dashboard/: page.tsx
app/auth/signin/: page.tsx
app/auth/signup/: page.tsx
docs/: PRD.md
lib/security/: config.ts  csrf.ts  middleware.ts  validators.ts
migrations/: 001_initial.sql
src/rize_manifest/: __init__.py  cli.py  manifest.py
tests/: test_manifest.py
