[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rize"
version = "0.1.0"
description = "AGenNext/Rize manifest validation utilities"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rize-manifest = "rize_manifest.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
